--- a/share/sch-scripts/ui/sch-scripts.ui
+++ b/share/sch-scripts/ui/sch-scripts.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.2"/>
   <object class="GtkListStore" id="groups_store">
@@ -68,7 +68,7 @@
     <property name="window-position">center</property>
     <property name="default-width">800</property>
     <property name="default-height">500</property>
-    <property name="icon">/usr/share/pixmaps/sch-scripts.svg</property>
+    <property name="icon">usr/share/pixmaps/sch-scripts.svg</property>
     <signal name="delete-event" handler="on_main_window_delete_event" swapped="no"/>
     <child>
       <object class="GtkBox" id="box1">
@@ -153,7 +153,7 @@
               <object class="GtkMenuItem" id="mi_server">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="label" translatable="yes">_Εξυπηρετητής</property>
+                <property name="label" translatable="yes">_Διακομιστής</property>
                 <property name="use-underline">True</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="mn_server">
