--- a/share/sch-scripts/ui/sch-scripts.ui
+++ b/share/sch-scripts/ui/sch-scripts.ui
@@ -204,7 +204,7 @@
                                 <property name="can-focus">False</property>
                                 <property name="label" translatable="yes">Εκκίνηση Επόπτης</property>
                                 <property name="use-underline">True</property>
-                                <signal name="activate" handler="on_mi_open_epoptrs" swapped="no"/>
+                                <signal name="activate" handler="on_mi_open_epoptes" swapped="no"/>
                               </object>
                             </child>
                           </object>
